Revert changes from commit Add fixed header - caused problems, covering the breadcrumbs, and the upload document button for new item

--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -26,8 +26,8 @@ body {
 .main-content {
   z-index: var(--ds-main-z-index);
   flex: 1 1 100%;
-  margin-top: 104px;
-  margin-bottom: auto;
+  margin-top: var(--ds-content-spacing);
+  margin-bottom: var(--ds-content-spacing);
 }
 
 .alert.hide {
