--- a/src/themes/fau/app/header/header.component.scss
+++ b/src/themes/fau/app/header/header.component.scss
@@ -4,7 +4,6 @@
   }
   .header {
     background-color: var(--ds-header-bg);
-    position: fixed;
   }
 }
 
